@@ -1,47 +1,37 @@
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
 
-// Basic Bogie class for the Train Consist Management App
-class Bogie {
-    private String type;
-    private String id;
-
-    public Bogie(String type, String id) {
-        this.type = type;
-        this.id = id;
-    }
-
-    public String getType() {
-        return type;
-    }
-
-    @Override
-    public String toString() {
-        return "Bogie{id='" + id + "', type='" + type + "'}";
-    }
-}
-
-public class TrainConsistApp {
+public class TrainConsistManagement {
     public static void main(String[] args) {
-        // 1. User creates a list of bogies
-        List<Bogie> bogies = Arrays.asList(
-                new Bogie("Sleeper", "S1"),
-                new Bogie("Sleeper", "S2"),
-                new Bogie("AC Chair", "A1"),
-                new Bogie("First Class", "F1"),
-                new Bogie("AC Chair", "A2")
+        // 1. User creates a list of bogies (Reuse existing Bogie objects)
+        List<Bogie> bogies = List.of(
+                new Bogie("Sleeper", 72),
+                new Bogie("AC Chair", 56),
+                new Bogie("First Class", 24)
         );
 
         // 2. System converts the list into a stream
-        // 3. groupingBy() collector is applied
-        // 4. Bogies are grouped into a Map
-        Map<String, List<Bogie>> groupedBogies = bogies.stream()
-                .collect(Collectors.groupingBy(Bogie::getType));
+        // 3. map() extracts capacity values
+        // 4. reduce() sums the capacities using Integer::sum
+        int totalSeatingCapacity = bogies.stream()
+                .map(b -> b.getCapacity()) // Extract capacity
+                .reduce(0, Integer::sum);  // Aggregate into total
 
-        // 5. Grouped result is displayed
-        System.out.println("--- Grouped Bogies by Type ---");
-        groupedBogies.forEach((type, list) -> {
-            System.out.println(type + ": " + list);
-        });
+        // 5. Total seating capacity is displayed
+        System.out.println("Total seating capacity of the train: " + totalSeatingCapacity);
+    }
+}
+
+// Supporting Bogie class structure based on UC10 requirements
+class Bogie {
+    private String type;
+    private int capacity;
+
+    public Bogie(String type, int capacity) {
+        this.type = type;
+        this.capacity = capacity;
+    }
+
+    public int getCapacity() {
+        return capacity;
     }
 }
